Fixes off center subtitle on admin portal page

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -13,7 +13,7 @@ $theme-green: #00D37F;
     margin-top: 40px;
   }
   .dashboard-section {
-    height: 400px;
+    // height: 400px;
     border-bottom: 1px solid $theme-blue;
     .resource {
       display: inline-block;
